# eurorust-demo

./: .gitignore  Cargo.toml  README.md  Secrets.toml
assets/: index.html  script.js  style.css
migrations/: schema.sql
src/: error.rs  handler.rs  main.rs  todo.rs
