[package]
name = "shuttle-eurorust-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.28.0"
shuttle-runtime = "0.28.0"
shuttle-shared-db = { version = "0.28.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = [
  "runtime-tokio-native-tls",
  "postgres",
] }
tokio = "1.28.2"
tower-http = { version = "0.4.0", features = ["fs"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
tracing = "0.1.37"
